# api/routes/users/route.ts
@@ -4,4 +4,5 @@ import { UsersController } from '@/api/controllers/users.controller'
 
 export default Router()
   .get('/users', UsersController.getUsers.handler())
+  .post('/users', UsersController.createUser.handler())
   .get('/users/:user_id', UsersController.getUser.handler())
